# oraculo-main

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PLANO_IMPLEMENTACAO_V3.md  README.md  agente.codex  mec.txt  oraculo_plano_implementacao.md  pyproject.toml  requirements.txt  start.bat  start.sh
.claude/: 00_orquestrador.md  01_revisor.md  02_guardiao.md  03_sinais.md  04_quant.md  05_execucao.md  06_persistencia.md  07_testes.md  08_refatoracao.md  09_observabilidade.md  SUPER_PROMPT_OPUS_ORACULO.md  analise-oraculo-main.md  contexto.md  run_analise_2026-06-20.md  run_baseline.md  settings.json  skill.md
.codex/: agents.codex
dados/: README.md  oraculo.db
frontend/: README.md  package-lock.json  package.json  server.js
migrations/: README.md  schema_mysql.sql
oraculo.egg-info/: PKG-INFO  SOURCES.txt
pytest_work/: isolado_auto_emergencia.sqlite  smoke_retomada.sqlite
scripts/: README.md  backtest_walkforward.py  create_user_testnet.py  force_create_orders.py  inicializar_db.py  migrar_src_dados.py  pesquisa_edge.py  reconcile_orders.py  rodar_local.bat  run_testnet_e2e.py  runbook_testnet_e2e.md  verificar_env_seguros.py
src/: README.md  __init__.py  main.py
tests/: README.md  conftest.py  test_ai_advisor_parse.py  test_api.py  test_api_multiativo.py  test_api_sessao_painel.py  test_api_usuario_sinais.py  test_audit.py  test_auto_trader_state.py  test_autotrader_modulos.py  test_cliente_binance.py  test_coletor_continuo.py  test_constantes_mercado.py  test_dashboard.py  test_detector_drift.py  test_edge_config.py  test_ev_calculator.py  test_filtro_ev.py  test_gerador_features.py  test_gerenciador_ordens.py  test_llm_origem.py  test_metrics_integration.py  test_modelagem_cache.py  test_modelo_gate.py  test_modo_exploracao.py  test_multiativo.py  test_noticias_service.py  test_observabilidade_api.py  test_p2_persistencia.py  test_pipeline.py  test_probability_calibrator.py  test_qualidade_sinal.py  test_recalibracao_startup.py  test_reconcile_import.py  test_repositorio_ohlcv.py  (+11 more)
(+128 files in other folders)
