[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oraculo"
version = "0.2.0"
description = "Plataforma local de analise e automacao do projeto Oraculo"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -p no:tmpdir"
asyncio_mode = "auto"
norecursedirs = [".venv", ".pytest_cache", ".pytest_tmp", ".tmp_pytest", "_pytest_work", "pytest_work"]
